[package]
name = "settime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2"
ureq = {version = "2.8.0", default-features = false, features = ["native-tls"]}


[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
]
